# world-cup-widget

./: .gitignore  README.md  pyproject.toml
scripts/: world-cup-widget
src/world_cup_widget/: __init__.py  app.py  config.py  flags.py  models.py  provider.py  tray.py  widget.py
tests/: test_flags.py  test_provider.py  test_widget.py
